styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Overpass', sans-serif;

/*   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
}

* {
  box-sizing: border-box;
}
.iframe{
 min-width:100% !important;
 height:850px !important;
 background-color: #FFFFFF!important;
}
a {
  @apply text-red-600 hover:text-red-300;
  font-family: 'Overpass', sans-serif;
  padding:.15rem .15rem;
}
a.text.gray-400{
  @apply text-red-600 hover:text-red-300;
  font-family: 'Overpass', sans-serif;
  padding:.15rem .15rem;
}
a.bg-red-500.hover:bg-red-800.text-white.px-4.py-2.m-2.text-xl{
  padding:.35rem .45rem;
}

ul, li{
  min-height:50px; text-align: center;
}

.outer {
}
.inner {
}

form.input-square{
 height: 38px !important;
  padding: 0 16px !important;
  font-size: 14px !important;
  border: 1px solid #888 !important;
  border-radius: 3px !important;
  margin-right: 8px !important; 
  font-family: 'Overpass', sans-serif!important;
}
form.button-square{
   cursor: pointer !important;
   background-color: rgba(239,68,68,var(--tw-text-opacity)) !important;
   color: white !important;
   height: 40px !important;
   border: 0 !important; 
   border-radius: 3px !important;
   font-size: 14px !important;
   padding: 0 16px !important;
   font-family: 'Overpass', sans-serif !important;
}
.bg-gray-900 {
 background-color: black;
}
footer.bg-gray-900.text-gray-40.py-4.text-sm,div.locations,h2{
 padding: 19px 19px !important;
  text-align:center!important;
}

